Fix PRE tag word wrap

--- a/src/main.scss
+++ b/src/main.scss
@@ -113,6 +113,7 @@ main {
     background:rgba(var(--ui-monochrome-03-rgb), 1.00);
     border-radius: 0.5em;
     padding: 0.5em;
+    white-space: pre-wrap;
   }
 }
 
